--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.22.2",
     "@types/react-router-dom": "^5.3.3",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
